0.8.0.5
  Improved cloudfare avoidance.
0.8.0.4
  Tweaked Gen2 doorbell support.
0.8.0.3
  Add Arlo Essential XL support (thank @mzsanford)
  Add Gen2 doorbell support.
  Renamed Essential doorbell.
0.8.0.2
  Handle 'synced' device state.
0.8.0.1
  Better Yahoo IMAP handling. It will now better parse out the emails and
  better keep track of the used IDs.
0.8.0.0
  Try multiple EDHC curves
  Allow `Source: arloWebCam` header entry to be turned on and off

0.8.0b12:
  Add Arlo Pro 5 support
  Allow cloudflare curves to be set
  Fix scheme in cfg
0.8.0b11:
  Latest arlo/cloudflare work arounds.
  Fix scheme in cgf
  Add host unit tests
0.8.0b10:
  Add schemaversion back.
0.8.0b9:
  Fix push headers.
  Added cache to headers [thank KoolLSL for pointing that out]
  Force SSE client over requests not cloudscraper.
0.8.0b8:
  Ping wired doorbell.
  Try proper device id for cloud flare
0.8.0b7:
  Allow more MQTT config.
  Fix headers.
  Distinguish between user/shared location.
  Fix missing event issue.
  Tidy capture code.
  Specify Python 3
0.8.0b6: Simplify state checking; bring API up to date and remove deprecated
    calls
  Add back the packet docs.
0.8.0b5: Add initial 8-in-1 sensor support
    [thanks xirtamoen for lending the sensors]
  Support Arlo v4 APIs
    [thanks JeffSteinbok for the implementation]
0.8.0b4: Allow ping when devices are on chargers.
  Added event_id and time to URL paths.
  Added custom cipher list.
0.8.0b3: Better snapshot tidy up.
  Improve debugging - add component or ID to debug entry.
  Allow actual user agent to be used by prefixing with a !
  Undo broken IMAP
  Fix doorbell motion
  Fix doorbell capabilities
0.8.0b2: Better shutdown of threads.
  Allow ciphers to be set to SSL defaults.
  Try to parse all email parts looking for the authentication code.
  Open mailbox read only, stops the wrong emails getting marked as read.
  Better detection of backend.
0.8.0b1: Fix yahoo imap support.
  Fix creation of ArloSnapshot objects.
