@@ -15,8 +15,6 @@ from .constant import (
     BLANK_IMAGE,
     DEVICES_PATH,
     FAST_REFRESH_INTERVAL,
-    INITIAL_REFRESH_DELAY,
-    MEDIA_LIBRARY_DELAY,
     MODEL_ESSENTIAL,
     MODEL_ESSENTIAL_INDOOR,
     MODEL_PRO_3_FLOODLIGHT,
@@ -30,8 +28,6 @@ from .constant import (
     MODEL_GO_2,
     MODEL_ESSENTIAL_XL,
     PING_CAPABILITY,
-    REFRESH_CAMERA_DELAY,
-    RESOURCE_CAPABILITY,
     SLOW_REFRESH_INTERVAL,
     TOTAL_BELLS_KEY,
     TOTAL_CAMERAS_KEY,
