@@ -3,6 +3,7 @@ DEFAULT_HOST = "https://myapi.arlo.com"
 ORIGIN_HOST = "https://my.arlo.com"
 REFERER_HOST = "https://my.arlo.com/"
 MQTT_HOST = "mqtt-cluster.arloxcld.com"
+DEFAULT_MQTT_PORT = 443
 
 DEVICES_PATH = "/hmsweb/v2/users/devices"
 DEFINITIONS_PATH = "/hmsweb/users/automation/definitions"
@@ -96,6 +97,7 @@ MOTION_DETECTED_KEY = "motionDetected"
 MOTION_STATE_KEY = "motionState"
 MOTION_ENABLED_KEY = "motionSetupModeEnabled"
 MOTION_SENS_KEY = "motionSetupModeSensitivity"
+MQTT_URL_KEY = "mqttUrl"
 POWER_SAVE_KEY = "powerSaveMode"
 PRIVACY_KEY = "privacyActive"
 LIGHT_BRIGHTNESS_KEY = "lightBrightness"
